--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aki77/rails-template-inspector",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "dist/rails-template-inspector.es.js",
   "exports": {
     ".": "./dist/rails-template-inspector.es.js"
@@ -13,7 +13,8 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "prepublish": "yarn build"
   },
   "dependencies": {
     "lit": "^2.0.2",
