--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "lit": "^2.0.2",
-    "mabiki": "^1.0.1"
+    "mabiki": "^1.0.1",
+    "twind": "^0.16.17"
   },
   "devDependencies": {
     "typescript": "^4.5.4",
