--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "dependencies": {
     "lit": "^2.0.2",
-    "mabiki": "^1.0.1",
-    "twind": "^0.16.17"
+    "mabiki": "^1.0.1"
   },
   "devDependencies": {
+    "@unocss/preset-wind": "^0.37.2",
     "typescript": "^4.5.4",
+    "unocss": "^0.37.2",
     "vite": "^2.9.9"
   }
 }
