--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "mabiki": "^1.0.1"
   },
   "devDependencies": {
-    "@unocss/preset-wind": "^0.41.1",
+    "@unocss/preset-icons": "^0.44.5",
+    "@unocss/preset-wind": "^0.44.5",
     "typescript": "^4.5.4",
-    "unocss": "^0.41.1",
+    "unocss": "^0.44.5",
     "vite": "^2.9.9"
   }
 }
