--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "dev": "vite --open",
     "build": "tsc && vite build",
-    "prepublish": "pnpm build"
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.0.1",
