--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aki77/rails-template-inspector",
-  "version": "0.6.2-alpha.1",
+  "version": "0.6.2",
   "main": "dist/rails-template-inspector.mjs",
   "exports": {
     ".": "./dist/rails-template-inspector.mjs"
